# skypro_project_1

./: .env_template  main.py  pyproject.toml  readme.md
data/: main_page.json  output.json  output_main_page.json  output_simple_search.json  output_spending_by_category.json  simple_search.json
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
